INI: Add support for new builds (#568)
- 6.1.7600.20890 (fix #563)
- 6.1.7600.21316 (fix #564)
- 6.1.7601.21650 (fix #565)
- 6.1.7601.21866 (fix #566)
- 6.1.7601.22104 (fix #567)
- 6.3.9600.19093 (fix #549)
- 10.0.14393.2457 (fix #542)
- 10.0.15063.1155 (fix #506)

--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2018-05-16
+Updated=2018-09-10
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -121,6 +121,34 @@ DefPolicyPatch.x64=1
 DefPolicyOffset.x64=17AD2
 DefPolicyCode.x64=CDefPolicy_Query_eax_rdi
 
+[6.1.7600.20890]
+SingleUserPatch.x86=1
+SingleUserOffset.x86=19E2D
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=17DF2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=196FB
+DefPolicyCode.x86=CDefPolicy_Query_eax_esi
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=17B0E
+DefPolicyCode.x64=CDefPolicy_Query_eax_rdi
+
+[6.1.7600.21316]
+SingleUserPatch.x86=1
+SingleUserOffset.x86=19E2D
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=17E3E
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=196FB
+DefPolicyCode.x86=CDefPolicy_Query_eax_esi
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=17B5E
+DefPolicyCode.x64=CDefPolicy_Query_eax_rdi
+
 [6.1.7601.17514]
 SingleUserPatch.x86=1
 SingleUserOffset.x86=1A49D
@@ -149,20 +177,6 @@ DefPolicyPatch.x64=1
 DefPolicyOffset.x64=17C82
 DefPolicyCode.x64=CDefPolicy_Query_eax_rdi
 
-[6.1.7601.22750]
-SingleUserPatch.x86=1
-SingleUserOffset.x86=1A655
-SingleUserCode.x86=nop
-SingleUserPatch.x64=1
-SingleUserOffset.x64=17E8E
-SingleUserCode.x64=Zero
-DefPolicyPatch.x86=1
-DefPolicyOffset.x86=19E21
-DefPolicyCode.x86=CDefPolicy_Query_eax_esi
-DefPolicyPatch.x64=1
-DefPolicyOffset.x64=17C92
-DefPolicyCode.x64=CDefPolicy_Query_eax_rdi
-
 [6.1.7601.18637]
 SingleUserPatch.x86=1
 SingleUserOffset.x86=1A4DD
@@ -175,6 +189,62 @@ DefPolicyOffset.x86=19DBB
 DefPolicyCode.x86=CDefPolicy_Query_eax_esi
 DefPolicyPatch.x64=1
 DefPolicyOffset.x64=17DC6
+DefPolicyCode.x64=CDefPolicy_Query_eax_rdi
+
+[6.1.7601.21650]
+SingleUserPatch.x86=1
+SingleUserOffset.x86=1A49D
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=180BE
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=19D53
+DefPolicyCode.x86=CDefPolicy_Query_eax_esi
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=17D5A
+DefPolicyCode.x64=CDefPolicy_Query_eax_rdi
+
+[6.1.7601.21866]
+SingleUserPatch.x86=1
+SingleUserOffset.x86=1A49D
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=180BE
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=19D53
+DefPolicyCode.x86=CDefPolicy_Query_eax_esi
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=17D5A
+DefPolicyCode.x64=CDefPolicy_Query_eax_rdi
+
+[6.1.7601.22104]
+SingleUserPatch.x86=1
+SingleUserOffset.x86=1A49D
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=180C6
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=19D53
+DefPolicyCode.x86=CDefPolicy_Query_eax_esi
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=17D5E
+DefPolicyCode.x64=CDefPolicy_Query_eax_rdi
+
+[6.1.7601.22750]
+SingleUserPatch.x86=1
+SingleUserOffset.x86=1A655
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=17E8E
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=19E21
+DefPolicyCode.x86=CDefPolicy_Query_eax_esi
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=17C92
 DefPolicyCode.x64=CDefPolicy_Query_eax_rdi
 
 [6.1.7601.22843]
@@ -505,6 +575,32 @@ SLInitOffset.x86=18328
 SLInitFunc.x86=New_CSLQuery_Initialize
 SLInitHook.x64=1
 SLInitOffset.x64=5D830
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[6.3.9600.19093]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=B3958
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8AE4E
+LocalOnlyCode.x64=nopjmp
+SingleUserPatch.x86=1
+SingleUserOffset.x86=3F045
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=36BC9
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=3D899
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=45305
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=18288
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=5D660
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [6.4.9841.0]
@@ -1263,6 +1359,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=C930
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.14393.2457]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8D811
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=29CF4
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1B545
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=C920
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.14901.1000]
 LocalOnlyPatch.x86=1
 LocalOnlyOffset.x86=A6038
@@ -1991,6 +2101,20 @@ SLInitOffset.x86=4549D
 SLInitFunc.x86=New_CSLQuery_Initialize
 SLInitHook.x64=1
 SLInitOffset.x64=D1EC
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.15063.1155]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8CB01
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=15EA4
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=FAE5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=234DC
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.16179.1000]
@@ -2994,6 +3118,25 @@ bServerSku.x64        =FA068
 ulMaxDebugSessions.x64=FA06C
 bRemoteConnAllowed.x64=FA070
 
+[6.3.9600.19093-SLInit]
+bFUSEnabled.x86       =D3068
+lMaxUserSessions.x86  =D306C
+bAppServerAllowed.x86 =D3070
+bInitialized.x86      =D3074
+bMultimonAllowed.x86  =D3078
+bServerSku.x86        =D307C
+ulMaxDebugSessions.x86=D3080
+bRemoteConnAllowed.x86=D3084
+
+bFUSEnabled.x64       =FA054
+lMaxUserSessions.x64  =FA058
+bAppServerAllowed.x64 =FA05C
+bInitialized.x64      =FA060
+bMultimonAllowed.x64  =FA064
+bServerSku.x64        =FA068
+ulMaxDebugSessions.x64=FA06C
+bRemoteConnAllowed.x64=FA070
+
 [6.4.9841.0-SLInit]
 bFUSEnabled.x86       =BF9F0
 lMaxUserSessions.x86  =BF9F4
@@ -3546,6 +3689,16 @@ bMultimonAllowed.x64  =E8478
 ulMaxDebugSessions.x64=E847C
 bFUSEnabled.x64       =E8480
 
+[10.0.14393.2457-SLInit]
+bServerSku.x64        =E73D0
+lMaxUserSessions.x64  =E73D4
+bAppServerAllowed.x64 =E73D8
+bInitialized.x64      =E8470
+bRemoteConnAllowed.x64=E8474
+bMultimonAllowed.x64  =E8478
+ulMaxDebugSessions.x64=E847C
+bFUSEnabled.x64       =E8480
+
 [10.0.14901.1000-SLInit]
 bInitialized.x86      =C1F6C
 bServerSku.x86        =C1F70
@@ -4070,6 +4223,16 @@ bMultimonAllowed.x86  =C2F84
 ulMaxDebugSessions.x86=C2F88
 bFUSEnabled.x86       =C2F8C
 
+bInitialized.x64      =E9468
+bRemoteConnAllowed.x64=E946C
+bMultimonAllowed.x64  =E9470
+ulMaxDebugSessions.x64=E9474
+bFUSEnabled.x64       =E9478
+bServerSku.x64        =E9484
+lMaxUserSessions.x64  =E9488
+bAppServerAllowed.x64 =E948C
+
+[10.0.15063.1155-SLInit]
 bInitialized.x64      =E9468
 bRemoteConnAllowed.x64=E946C
 bMultimonAllowed.x64  =E9470
