INI: Add support for new builds (#542)
10.0.14393.2457 x86

--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2018-10-03
+Updated=2018-10-04
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -1368,15 +1368,27 @@ SLInitOffset.x64=C930
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.14393.2457]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=A6248
+LocalOnlyCode.x86=jmpshort
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=8D811
 LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=36CE5
+SingleUserCode.x86=nop
 SingleUserPatch.x64=1
 SingleUserOffset.x64=29CF4
 SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=31209
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
 DefPolicyPatch.x64=1
 DefPolicyOffset.x64=1B545
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=45824
+SLInitFunc.x86=New_CSLQuery_Initialize
 SLInitHook.x64=1
 SLInitOffset.x64=C920
 SLInitFunc.x64=New_CSLQuery_Initialize
@@ -3752,6 +3764,15 @@ ulMaxDebugSessions.x64=E847C
 bFUSEnabled.x64       =E8480
 
 [10.0.14393.2457-SLInit]
+bInitialized.x86      =C1F94
+bServerSku.x86        =C1F98
+lMaxUserSessions.x86  =C1F9C
+bAppServerAllowed.x86 =C1FA0
+bRemoteConnAllowed.x86=C1FA4
+bMultimonAllowed.x86  =C1FA8
+ulMaxDebugSessions.x86=C1FAC
+bFUSEnabled.x86       =C1FB0
+
 bServerSku.x64        =E73D0
 lMaxUserSessions.x64  =E73D4
 bAppServerAllowed.x64 =E73D8
