INI: Add support for new builds (fix #586)
- 6.1.7601.24234 x86

--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2018-10-04
+Updated=2018-10-10
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -276,9 +276,15 @@ DefPolicyOffset.x64=17CE2
 DefPolicyCode.x64=CDefPolicy_Query_eax_rdi
 
 [6.1.7601.24234]
+SingleUserPatch.x86=1
+SingleUserOffset.x86=1A675
+SingleUserCode.x86=nop
 SingleUserPatch.x64=1
 SingleUserOffset.x64=17F56
 SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=19E41
+DefPolicyCode.x86=CDefPolicy_Query_eax_esi
 DefPolicyPatch.x64=1
 DefPolicyOffset.x64=17D2E
 DefPolicyCode.x64=CDefPolicy_Query_eax_rdi
