--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -3632,6 +3632,33 @@ SLInitHook.x64=1
 SLInitOffset.x64=1ACDC
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.17763.771]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=AFEB4
+LocalOnlyCode.x86=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=4D7F5
+SingleUserCode.x86=nop
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=4BFF9
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+SLInitHook.x86=1
+SLInitOffset.x86=5B30A
+SLInitFunc.x86=New_CSLQuery_Initialize
+
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=77AD1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=1339C
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=18025
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1ACDC
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.18362.1]
 LocalOnlyPatch.x86=1
 LocalOnlyOffset.x86=B7A16
@@ -5907,6 +5934,25 @@ bRemoteConnAllowed.x64=ECAC4
 bMultimonAllowed.x64  =ECAC8
 ulMaxDebugSessions.x64=ECACC
 bFUSEnabled.x64       =ECAD0
+
+[10.0.17763.771-SLInit]
+bInitialized.x86      =CD79C
+bServerSku.x86        =CD7A0
+lMaxUserSessions.x86  =CD7A4
+bAppServerAllowed.x86 =CD7AC
+bRemoteConnAllowed.x86=CD7B0
+bMultimonAllowed.x86  =CD7B4
+ulMaxDebugSessions.x86=CD7B8
+bFUSEnabled.x86       =CD7BC
+
+bServerSku.x64        =ECAB8
+lMaxUserSessions.x64  =ECABC
+bAppServerAllowed.x64 =ECAC4
+bInitialized.x64      =ECAB4
+bRemoteConnAllowed.x64=ECAC8
+bMultimonAllowed.x64  =ECACC
+ulMaxDebugSessions.x64=ECAD0
+bFUSEnabled.x64       =ECAD4
 
 [10.0.18362.1-SLInit]
 bInitialized.x86      =D477C
