--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2019-09-02
+Updated=2020-02-05
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -1723,7 +1723,6 @@ SLInitHook.x86=1
 SLInitOffset.x86=45824
 SLInitFunc.x86=New_CSLQuery_Initialize
 
-
 [10.0.14393.2906]
 LocalOnlyPatch.x86=1
 LocalOnlyOffset.x86=A6578
@@ -1745,6 +1744,58 @@ DefPolicyOffset.x64=F185
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
 SLInitHook.x86=1
 SLInitOffset.x86=45912
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=22C80
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.14393.3383]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=A6578
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8D8A1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=36CE5
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=1B6A4
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=31209
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=F185
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=45912
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=22C80
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.14393.3471]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=A6528
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8D931
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=36C65
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=1B6A4
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=31189
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=F185
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=458A2
 SLInitFunc.x86=New_CSLQuery_Initialize
 SLInitHook.x64=1
 SLInitOffset.x64=22C80
@@ -4541,6 +4592,44 @@ ulMaxDebugSessions.x86=C1FAC
 bFUSEnabled.x86       =C1FB0
 
 [10.0.14393.2906-SLInit]
+bInitialized.x86      =C2F94
+bServerSku.x86        =C2F98
+lMaxUserSessions.x86  =C2F9C
+bAppServerAllowed.x86 =C2FA0
+bRemoteConnAllowed.x86=C2FA4
+bMultimonAllowed.x86  =C2FA8
+ulMaxDebugSessions.x86=C2FAC
+bFUSEnabled.x86       =C2FB0
+
+bServerSku.x64        =E73D0
+lMaxUserSessions.x64  =E73D4
+bAppServerAllowed.x64 =E73D8
+bInitialized.x64      =E8470
+bRemoteConnAllowed.x64=E8474
+bMultimonAllowed.x64  =E8478
+ulMaxDebugSessions.x64=E847C
+bFUSEnabled.x64       =E8480
+
+[10.0.14393.3383-SLInit]
+bInitialized.x86      =C2F94
+bServerSku.x86        =C2F98
+lMaxUserSessions.x86  =C2F9C
+bAppServerAllowed.x86 =C2FA0
+bRemoteConnAllowed.x86=C2FA4
+bMultimonAllowed.x86  =C2FA8
+ulMaxDebugSessions.x86=C2FAC
+bFUSEnabled.x86       =C2FB0
+
+bServerSku.x64        =E73D0
+lMaxUserSessions.x64  =E73D4
+bAppServerAllowed.x64 =E73D8
+bInitialized.x64      =E8470
+bRemoteConnAllowed.x64=E8474
+bMultimonAllowed.x64  =E8478
+ulMaxDebugSessions.x64=E847C
+bFUSEnabled.x64       =E8480
+
+[10.0.14393.3471-SLInit]
 bInitialized.x86      =C2F94
 bServerSku.x86        =C2F98
 lMaxUserSessions.x86  =C2F9C
