--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2020-02-14
+Updated=2020-02-16
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -872,6 +872,20 @@ SLInitOffset.x86=180F8
 SLInitFunc.x86=New_CSLQuery_Initialize
 SLInitHook.x64=1
 SLInitOffset.x64=5C0D0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[6.3.9600.19628]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8A07D
+LocalOnlyCode.x64=nopjmp
+SingleUserPatch.x64=1
+SingleUserOffset.x64=358E9
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=43EF5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=5C2E0
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [6.4.9841.0]
@@ -3748,7 +3762,6 @@ DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
 SLInitHook.x86=1
 SLInitOffset.x86=5B30A
 SLInitFunc.x86=New_CSLQuery_Initialize
-
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=77AD1
 LocalOnlyCode.x64=jmpshort
@@ -4038,6 +4051,16 @@ bServerSku.x86        =D407C
 ulMaxDebugSessions.x86=D4080
 bRemoteConnAllowed.x86=D4084
 
+bFUSEnabled.x64       =FA054
+lMaxUserSessions.x64  =FA058
+bAppServerAllowed.x64 =FA05C
+bInitialized.x64      =FA060
+bMultimonAllowed.x64  =FA064
+bServerSku.x64        =FA068
+ulMaxDebugSessions.x64=FA06C
+bRemoteConnAllowed.x64=FA070
+
+[6.3.9600.19628-SLInit]
 bFUSEnabled.x64       =FA054
 lMaxUserSessions.x64  =FA058
 bAppServerAllowed.x64 =FA05C
@@ -5719,8 +5742,6 @@ bMultimonAllowed.x64  =EE4A8
 ulMaxDebugSessions.x64=EE4AC
 bFUSEnabled.x64       =EE4B0
 
-
-
 [10.0.16299.1087-SLInit]
 bInitialized.x86      =C6F7C
 bServerSku.x86        =C6F80
@@ -6065,14 +6086,14 @@ ulMaxDebugSessions.x64=ECACC
 bFUSEnabled.x64       =ECAD0
 
 [10.0.17763.288-SLInit]
-bInitialized.x86 =CD798
-bServerSku.x86 =CD79C
-lMaxUserSessions.x86 =CD7A0
+bInitialized.x86      =CD798
+bServerSku.x86        =CD79C
+lMaxUserSessions.x86  =CD7A0
 bAppServerAllowed.x86 =CD7A8
 bRemoteConnAllowed.x86=CD7AC
-bMultimonAllowed.x86 =CD7B0
+bMultimonAllowed.x86  =CD7B0
 ulMaxDebugSessions.x86=CD7B4
-bFUSEnabled.x86 =CD7B8
+bFUSEnabled.x86       =CD7B8
 
 bInitialized.x64 =ECAB0
 bServerSku.x64 =ECAB4
@@ -6217,20 +6238,21 @@ ulMaxDebugSessions.x64=F6AA8
 bFUSEnabled.x64       =F6AAC
 
 [10.0.18362.657-SLInit]
-bInitialized.x86 =D577C
-bServerSku.x86 =D5780
-lMaxUserSessions.x86 =D5784
+bInitialized.x86      =D577C
+bServerSku.x86        =D5780
+lMaxUserSessions.x86  =D5784
 bAppServerAllowed.x86 =D578C
 bRemoteConnAllowed.x86=D5790
-bMultimonAllowed.x86 =D5794
+bMultimonAllowed.x86  =D5794
 ulMaxDebugSessions.x86=D5798
-bFUSEnabled.x86 =D579C
+bFUSEnabled.x86       =D579C
 
-bInitialized.x64 =F6A8C
-bServerSku.x64 =F6A90
-lMaxUserSessions.x64 =F6A94
+bInitialized.x64      =F6A8C
+bServerSku.x64        =F6A90
+lMaxUserSessions.x64  =F6A94
 bAppServerAllowed.x64 =F6A9C
 bRemoteConnAllowed.x64=F6AA0
-bMultimonAllowed.x64 =F6AA4
+bMultimonAllowed.x64  =F6AA4
 ulMaxDebugSessions.x64=F6AA8
-bFUSEnabled.x64 =F6AAC
+bFUSEnabled.x64       =F6AAC
+
