--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -3999,6 +3999,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=1BDFC
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.19041.662]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=88E81
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0CA0C
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=189D5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1D50C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -6452,4 +6466,13 @@ bMultimonAllowed.x64  =104014
 ulMaxDebugSessions.x64=104018
 bFUSEnabled.x64       =10401C
 
+[10.0.19041.662-SLInit]
+bInitialized.x64      =106028
+bServerSku.x64        =10602C
+lMaxUserSessions.x64  =106030
+bAppServerAllowed.x64 =106038
+bRemoteConnAllowed.x64=106040
+bMultimonAllowed.x64  =104044
+ulMaxDebugSessions.x64=104048
+bFUSEnabled.x64       =10404C
 
