--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -4000,15 +4000,27 @@ SLInitOffset.x64=1BDFC
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.19041.662]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=B5F59
+LocalOnlyCode.x86=jmpshort
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=88E81
 LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=3BC05
+SingleUserCode.x86=nop
 SingleUserPatch.x64=1
 SingleUserOffset.x64=0CA0C
 SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=3E779
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
 DefPolicyPatch.x64=1
 DefPolicyOffset.x64=189D5
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=68068
+SLInitFunc.x86=New_CSLQuery_Initialize
 SLInitHook.x64=1
 SLInitOffset.x64=1D50C
 SLInitFunc.x64=New_CSLQuery_Initialize
@@ -6467,6 +6479,15 @@ ulMaxDebugSessions.x64=104018
 bFUSEnabled.x64       =10401C
 
 [10.0.19041.662-SLInit]
+bInitialized.x86      =D1954
+bServerSku.x86        =D1958
+lMaxUserSessions.x86  =D195C
+bAppServerAllowed.x86 =D1964
+bRemoteConnAllowed.x86=D196C
+bMultimonAllowed.x86  =D1970
+ulMaxDebugSessions.x86=D1974
+bFUSEnabled.x86       =D1978
+
 bInitialized.x64      =106028
 bServerSku.x64        =10602C
 lMaxUserSessions.x64  =106030
