add support for 10.0.17763.1613 (x64)

--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -3843,6 +3843,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=1ACDC
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.17763.1613]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=7E381
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=1386C
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=184F5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=2198C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.18362.1]
 LocalOnlyPatch.x86=1
 LocalOnlyOffset.x86=B7A16
@@ -6363,6 +6377,16 @@ bRemoteConnAllowed.x64=ECAC8
 bMultimonAllowed.x64  =ECACC
 ulMaxDebugSessions.x64=ECAD0
 bFUSEnabled.x64       =ECAD4
+
+[10.0.17763.1613-SLInit]
+bServerSku.x64        =F3B90
+lMaxUserSessions.x64  =F3B94
+bAppServerAllowed.x64 =F3B9C
+bInitialized.x64      =F3B8C
+bRemoteConnAllowed.x64=F3BA0
+bMultimonAllowed.x64  =F3BA4
+ulMaxDebugSessions.x64=F3BA8
+bFUSEnabled.x64       =F3BAC
 
 [10.0.18362.1-SLInit]
 bInitialized.x86      =D477C
