--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2020-12-09
+Updated=2021-01-13
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -3987,6 +3987,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=22DDC
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.18362.1316]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=83075
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0DC4C
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1FE65
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=22E9C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.19041.84]
 LocalOnlyPatch.x86=1
 LocalOnlyOffset.x86=B46B9
@@ -4037,6 +4051,20 @@ SLInitOffset.x86=68068
 SLInitFunc.x86=New_CSLQuery_Initialize
 SLInitHook.x64=1
 SLInitOffset.x64=1D50C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.19041.746]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=88F31
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0CA4C
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=18A15
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1D5BC
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [SLInit]
@@ -6483,6 +6511,16 @@ bMultimonAllowed.x64  =F6AA4
 ulMaxDebugSessions.x64=F6AA8
 bFUSEnabled.x64       =F6AAC
 
+[10.0.18362.1316-SLInit]
+bInitialized.x64      =F6A8C
+bServerSku.x64        =F6A90
+lMaxUserSessions.x64  =F6A94
+bAppServerAllowed.x64 =F6A9C
+bRemoteConnAllowed.x64=F6AA0
+bMultimonAllowed.x64  =F6AA4
+ulMaxDebugSessions.x64=F6AA8
+bFUSEnabled.x64       =F6AAC
+
 [10.0.19041.84-SLInit]
 bInitialized.x86      =CF920
 bServerSku.x86        =CF924
@@ -6520,4 +6558,16 @@ bRemoteConnAllowed.x64=106040
 bMultimonAllowed.x64  =106044
 ulMaxDebugSessions.x64=106048
 bFUSEnabled.x64       =10604C
+
+[10.0.19041.746-SLInit]
+bInitialized.x64      =106028
+bServerSku.x64        =10602C
+lMaxUserSessions.x64  =106030
+bAppServerAllowed.x64 =106038
+bRemoteConnAllowed.x64=106040
+bMultimonAllowed.x64  =106044
+ulMaxDebugSessions.x64=106048
+bFUSEnabled.x64       =10604C
+
+
 
