--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -3857,6 +3857,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=2198C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.17763.1697]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=7E421
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=138BC
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=18545
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=21A3C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.18362.1]
 LocalOnlyPatch.x86=1
 LocalOnlyOffset.x86=B7A16
@@ -6411,6 +6425,16 @@ bServerSku.x64        =F3B90
 lMaxUserSessions.x64  =F3B94
 bAppServerAllowed.x64 =F3B9C
 bInitialized.x64      =F3B8C
+bRemoteConnAllowed.x64=F3BA0
+bMultimonAllowed.x64  =F3BA4
+ulMaxDebugSessions.x64=F3BA8
+bFUSEnabled.x64       =F3BAC
+
+[10.0.17763.1697-SLInit]
+bInitialized.x64      =F3B8C
+bServerSku.x64        =F3B90
+lMaxUserSessions.x64  =F3B94
+bAppServerAllowed.x64 =F3B9C
 bRemoteConnAllowed.x64=F3BA0
 bMultimonAllowed.x64  =F3BA4
 ulMaxDebugSessions.x64=F3BA8
