--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -1816,6 +1816,32 @@ SLInitHook.x64=1
 SLInitOffset.x64=22C80
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.14393.3986]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=A6578
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8D8A1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=36CE5
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=1B6A4
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=31209
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=F185
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=45912
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=22C80
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.14393.3471]
 LocalOnlyPatch.x86=1
 LocalOnlyOffset.x86=A6528
@@ -1866,6 +1892,20 @@ SLInitOffset.x86=458A2
 SLInitFunc.x86=New_CSLQuery_Initialize
 SLInitHook.x64=1
 SLInitOffset.x64=22C80
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.14393.4169]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8CE51
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=25FA4
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=29825
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=CA40
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.14901.1000]
@@ -3844,6 +3884,19 @@ SLInitOffset.x64=1ACDC
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.17763.1613]
+LocalOnlyPatch.x86 =1
+LocalOnlyOffset.x86 =B5834
+LocalOnlyCode.x86 =jmpshort
+SingleUserPatch.x86 =1
+SingleUserOffset.x86=4EC35
+SingleUserCode.x86 =nop
+DefPolicyPatch.x86 =1
+DefPolicyOffset.x86 =4D439
+DefPolicyCode.x86 =CDefPolicy_Query_eax_ecx
+SLInitHook.x86 =1
+SLInitOffset.x86 =61A0A
+SLInitFunc.x86 =New_CSLQuery_Initialize
+
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=7E381
 LocalOnlyCode.x64=jmpshort
@@ -4980,6 +5033,35 @@ bRemoteConnAllowed.x64=E8474
 bMultimonAllowed.x64  =E8478
 ulMaxDebugSessions.x64=E847C
 bFUSEnabled.x64       =E8480
+
+[10.0.14393.3986-SLInit]
+bInitialized.x86      =C2F94
+bServerSku.x86        =C2F98
+lMaxUserSessions.x86  =C2F9C
+bAppServerAllowed.x86 =C2FA0
+bRemoteConnAllowed.x86=C2FA4
+bMultimonAllowed.x86  =C2FA8
+ulMaxDebugSessions.x86=C2FAC
+bFUSEnabled.x86       =C2FB0
+
+bServerSku.x64        =E73D0
+lMaxUserSessions.x64  =E73D4
+bAppServerAllowed.x64 =E73D8
+bInitialized.x64      =E8470
+bRemoteConnAllowed.x64=E8474
+bMultimonAllowed.x64  =E8478
+ulMaxDebugSessions.x64=E847C
+bFUSEnabled.x64       =E8480
+
+[10.0.14393.4169-SLInit]
+bServerSku.x64        =E63D0
+lMaxUserSessions.x64  =E63D4
+bAppServerAllowed.x64 =E63D8
+bInitialized.x64      =E7470
+bRemoteConnAllowed.x64=E7474
+bMultimonAllowed.x64  =E7478
+ulMaxDebugSessions.x64=E747C
+bFUSEnabled.x64       =E7480
 
 [10.0.14901.1000-SLInit]
 bInitialized.x86      =C1F6C
@@ -6421,6 +6503,15 @@ ulMaxDebugSessions.x64=ECAD0
 bFUSEnabled.x64       =ECAD4
 
 [10.0.17763.1613-SLInit]
+bInitialized.x86      =D3828
+bServerSku.x86        =D382C
+lMaxUserSessions.x86  =D3830
+bAppServerAllowed.x86 =D3838
+bRemoteConnAllowed.x86=D383C
+bMultimonAllowed.x86  =D3840
+ulMaxDebugSessions.x86=D3844
+bFUSEnabled.x86       =D3848
+
 bServerSku.x64        =F3B90
 lMaxUserSessions.x64  =F3B94
 bAppServerAllowed.x64 =F3B9C
