--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -5,7 +5,9 @@
 Updated=2021-01-13
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
-SLPolicyHookNT61=1
+SLPolicyHookNT61=1LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=B67C6
+LocalOnlyCode.x86=jmpshort
 
 [SLPolicy]
 TerminalServices-RemoteConnectionManager-AllowRemoteConnections=1
@@ -4055,15 +4057,27 @@ SLInitOffset.x64=22DDC
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.18362.1316]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=B67C6
+LocalOnlyCode.x86=jmpshort
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=83075
 LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=35735
+SingleUserCode.x86=nop
 SingleUserPatch.x64=1
 SingleUserOffset.x64=0DC4C
 SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=4D679
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
 DefPolicyPatch.x64=1
 DefPolicyOffset.x64=1FE65
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=5C18A
+SLInitFunc.x86=New_CSLQuery_Initialize
 SLInitHook.x64=1
 SLInitOffset.x64=22E9C
 SLInitFunc.x64=New_CSLQuery_Initialize
@@ -6627,6 +6641,14 @@ ulMaxDebugSessions.x64=F6AA8
 bFUSEnabled.x64       =F6AAC
 
 [10.0.18362.1316-SLInit]
+bInitialized.x86      =D377C
+bServerSku.x86        =D3780
+lMaxUserSessions.x86  =D3784
+bAppServerAllowed.x86 =D378C
+bRemoteConnAllowed.x86=D3790
+bMultimonAllowed.x86  =D3794
+ulMaxDebugSessions.x86=D3798
+bFUSEnabled.x86       =D379C
 bInitialized.x64      =F6A8C
 bServerSku.x64        =F6A90
 lMaxUserSessions.x64  =F6A94
