--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -3889,42 +3889,53 @@ SLInitFunc.x64=New_CSLQuery_Initialize
 LocalOnlyPatch.x86 =1
 LocalOnlyOffset.x86 =B5834
 LocalOnlyCode.x86 =jmpshort
-SingleUserPatch.x86 =1
-SingleUserOffset.x86=4EC35
-SingleUserCode.x86 =nop
-DefPolicyPatch.x86 =1
-DefPolicyOffset.x86 =4D439
-DefPolicyCode.x86 =CDefPolicy_Query_eax_ecx
-SLInitHook.x86 =1
-SLInitOffset.x86 =61A0A
-SLInitFunc.x86 =New_CSLQuery_Initialize
-
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=7E381
 LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86 =1
+SingleUserOffset.x86=4EC35
+SingleUserCode.x86 =nop
 SingleUserPatch.x64=1
 SingleUserOffset.x64=1386C
 SingleUserCode.x64=Zero
+DefPolicyPatch.x86 =1
+DefPolicyOffset.x86 =4D439
+DefPolicyCode.x86 =CDefPolicy_Query_eax_ecx
 DefPolicyPatch.x64=1
 DefPolicyOffset.x64=184F5
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86 =1
+SLInitOffset.x86 =61A0A
+SLInitFunc.x86 =New_CSLQuery_Initialize
 SLInitHook.x64=1
 SLInitOffset.x64=2198C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.17763.1697]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=B4584
+LocalOnlyCode.x86=jmpshort
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=7E421
 LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=4EF55
+SingleUserCode.x86=nop
 SingleUserPatch.x64=1
 SingleUserOffset.x64=138BC
 SingleUserCode.x64=Zero
 DefPolicyPatch.x64=1
 DefPolicyOffset.x64=18545
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=4D5D9
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
 SLInitHook.x64=1
 SLInitOffset.x64=21A3C
 SLInitFunc.x64=New_CSLQuery_Initialize
+SLInitHook.x86=1
+SLInitOffset.x86=61C6A
+SLInitFunc.x86=New_CSLQuery_Initialize
 
 [10.0.18362.1]
 LocalOnlyPatch.x86=1
@@ -4135,18 +4146,30 @@ SLInitOffset.x64=1D50C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.19041.746]
+LocalOnlyPatch.x86 =1
+LocalOnlyOffset.x86 =B5979
+LocalOnlyCode.x86 =jmpshort
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=88F31
 LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86 =1
+SingleUserOffset.x86=3BC05
+SingleUserCode.x86 =nop
 SingleUserPatch.x64=1
 SingleUserOffset.x64=0CA4C
 SingleUserCode.x64=Zero
 DefPolicyPatch.x64=1
 DefPolicyOffset.x64=18A15
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+DefPolicyPatch.x86 =1
+DefPolicyOffset.x86 =3E779
+DefPolicyCode.x86 =CDefPolicy_Query_eax_ecx
 SLInitHook.x64=1
 SLInitOffset.x64=1D5BC
 SLInitFunc.x64=New_CSLQuery_Initialize
+SLInitHook.x86 =1
+SLInitOffset.x86 =67B9A
+SLInitFunc.x86 =New_CSLQuery_Initialize
 
 [SLInit]
 bServerSku=1
@@ -6536,6 +6559,15 @@ ulMaxDebugSessions.x64=F3BA8
 bFUSEnabled.x64       =F3BAC
 
 [10.0.17763.1697-SLInit]
+bInitialized.x86      =D1828
+bServerSku.x86        =D182C
+lMaxUserSessions.x86  =D1830
+bAppServerAllowed.x86 =D1838
+bRemoteConnAllowed.x86=D183C
+bMultimonAllowed.x86  =D1840
+ulMaxDebugSessions.x86=D1844
+bFUSEnabled.x86       =D1848
+
 bInitialized.x64      =F3B8C
 bServerSku.x64        =F3B90
 lMaxUserSessions.x64  =F3B94
@@ -6697,6 +6729,15 @@ ulMaxDebugSessions.x64=106048
 bFUSEnabled.x64       =10604C
 
 [10.0.19041.746-SLInit]
+bInitialized.x86      =D0954
+bServerSku.x86        =D0958
+lMaxUserSessions.x86  =D095C
+bAppServerAllowed.x86 =D0964
+bRemoteConnAllowed.x86=D096C
+bMultimonAllowed.x86  =D0970
+ulMaxDebugSessions.x86=D0974
+bFUSEnabled.x86       =D0978
+
 bInitialized.x64      =106028
 bServerSku.x64        =10602C
 lMaxUserSessions.x64  =106030
