--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -5,9 +5,7 @@
 Updated=2021-01-24
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
-SLPolicyHookNT61=1LocalOnlyPatch.x86=1
-LocalOnlyOffset.x86=B67C6
-LocalOnlyCode.x86=jmpshort
+SLPolicyHookNT61=1
 
 [SLPolicy]
 TerminalServices-RemoteConnectionManager-AllowRemoteConnections=1
