add support for 10.0.19041.789

--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -4169,6 +4169,32 @@ SLInitHook.x86 =1
 SLInitOffset.x86 =67B9A
 SLInitFunc.x86 =New_CSLQuery_Initialize
 
+[10.0.19041.789]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=B59D9
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=88F41
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=3BC45
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0CA4C
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=3E7C9
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=18A15
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=67BF8
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=1D5BC
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -6745,5 +6771,23 @@ bMultimonAllowed.x64  =106044
 ulMaxDebugSessions.x64=106048
 bFUSEnabled.x64       =10604C
 
+[10.0.19041.789-SLInit]
+bInitialized.x86      =D0954
+bServerSku.x86        =D0958
+lMaxUserSessions.x86  =D095C
+bAppServerAllowed.x86 =D0964
+bRemoteConnAllowed.x86=D096C
+bMultimonAllowed.x86  =D0970
+ulMaxDebugSessions.x86=D0974
+bFUSEnabled.x86       =D0978
+
+bInitialized.x64      =106028
+bServerSku.x64        =10602C
+lMaxUserSessions.x64  =106030
+bAppServerAllowed.x64 =106038
+bRemoteConnAllowed.x64=106040
+bMultimonAllowed.x64  =106044
+ulMaxDebugSessions.x64=106048
+bFUSEnabled.x64       =10604C
 
 
