--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2021-02-03
+Updated=2021-02-06
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -1122,6 +1122,32 @@ DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
 SLInitHook.x86=1
 SLInitOffset.x86=3FA58
 SLInitFunc.x86=New_CSLQuery_Initialize
+
+[10.0.10240.18818]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=A7818
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=95E91
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=395BC
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=18274
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=3C629
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=0F0C5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=44677
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=254F0
+SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.10586.0]
 LocalOnlyPatch.x86=1
@@ -4550,6 +4576,25 @@ bMultimonAllowed.x86  =C4F98
 bServerSku.x86        =C4F9C
 ulMaxDebugSessions.x86=C4FA0
 bRemoteConnAllowed.x86=C4FA4
+
+[10.0.10240.18818-SLInit]
+bInitialized.x86      =C3F94
+bServerSku.x86        =C3F9C
+lMaxUserSessions.x86  =C3F8C
+bAppServerAllowed.x86 =C3F90
+bRemoteConnAllowed.x86=C3FA4
+bMultimonAllowed.x86  =C3F98
+ulMaxDebugSessions.x86=C3FA0
+bFUSEnabled.x86       =C3F88
+
+lMaxUserSessions.x64  =F13B0
+bAppServerAllowed.x64 =F13B4
+bServerSku.x64        =F13B8
+bFUSEnabled.x64       =F2460
+bInitialized.x64      =F2464
+bMultimonAllowed.x64  =F2468
+ulMaxDebugSessions.x64=F246C
+bRemoteConnAllowed.x64=F2470
 
 [10.0.10586.0-SLInit]
 bFUSEnabled.x86       =C3F60
